add authentication route
